fixed create export etc and settings connection

--- a/commentimagesource.html
+++ b/commentimagesource.html
@@ -116,9 +116,15 @@ body { margin: 0; font-family: 'Inter', sans-serif; background: #0f0f11; color: 
 //  ✏️  ADD YOUR IMAGE LINKS HERE — just paste URLs & labels
 // ══════════════════════════════════════════════════════════
 const REACTION_IMAGES = [
-  // { name: 'excited',  src: 'https://media.discordapp.net/…' },
-  // { name: 'lol',      src: 'https://i.imgur.com/…' },
-  // { name: 'no way',   src: 'https://cdn.discordapp.com/…' },
+  // { name: 'nuke the whole generation',  src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349562855129148/IMG_1823.png?ex=699d29da&is=699bd85a&hm=814398268355f95fd3abc441b2b8a82f01715e19951e6626a2c57bed627305c9&=&format=webp&quality=lossless&width=1078&height=747' },
+  // { name: 'who is this',      src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349562540687505/IMG_1824.png?ex=699d29da&is=699bd85a&hm=9abb595c242571dbf2cdb3ee9ead3f743e75bc6b23ea66f3b3669497f00fc080&=&format=webp&quality=lossless&width=928&height=747' },
+  // { name: 'sipping lex luthor',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349562297155654/IMG_1825.png?ex=699d29da&is=699bd85a&hm=e5a54325906c49431f1c29c3b7bfcd9bfffa4f22a8ca9a752b0e156846b11667&=&format=webp&quality=lossless&width=1020&height=747' },
+  // { name: 'read',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349562049695836/IMG_1826.png?ex=699d29da&is=699bd85a&hm=3069350608e572e9716c8b6c1b159783bab1095d737ccf756d61d5d6a7707258&=&format=webp&quality=lossless' },
+  // { name: 'sobbing man',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349561693307112/IMG_1827.png?ex=699d29da&is=699bd85a&hm=70e50b7762c4a8f438c9f00e6356856b9d1b0a44e931f1f5ad8d042f81ce49e5&=&format=webp&quality=lossless&width=603&height=747' },
+  // { name: 'thinking',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349549005541376/IMG_1831.png?ex=699d29d7&is=699bd857&hm=9126a17b3dd54924c38d5b17f64b73de61e2d75f9adf95a1bb8edb167e3f387b&=&format=webp&quality=lossless' },
+  // { name: 'gem found',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349548737237102/IMG_1832.png?ex=699d29d7&is=699bd857&hm=0143f2eb8c628fed458315089dded9437b3fb644ba036763ad24e94e5592db3f&=&format=webp&quality=lossless&width=784&height=747' },
+  // { name: 'flight interested',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349548468535346/IMG_1833.png?ex=699d29d7&is=699bd857&hm=46e818dd12315fd5baeb433ebd524b395efa2a7a80bb8ff3eb968c515c37fac5&=&format=webp&quality=lossless&width=784&height=747' },
+  // { name: 'spongebob phone',   src: 'https://media.discordapp.net/attachments/1472088820584419450/1475349549622231122/IMG_1829.png?ex=699d29d7&is=699bd857&hm=1a0c0f77fbf198ac858929882911ab00f54672baf4eccc6d89fe0cf1466a3a01&=&format=webp&quality=lossless&width=1031&height=747' },
   // Keep adding as many as you want below:
 
 ];
