--- a/settings.html
+++ b/settings.html
@@ -96,9 +96,9 @@
         <div class="setting-item">
             <span>Swipe Direction</span>
             <select id="swipe-dir" onchange="saveSetting('cc-swipe-dir', this.value)">
-                <option value="horizontal">Horizontal</option>
-                <option value="vertical">Vertical</option>
-                <option value="creator">Set by Creator</option>
+                <option value="creator">Set by Creator (default)</option>
+                <option value="horizontal">Always Horizontal</option>
+                <option value="vertical">Always Vertical</option>
             </select>
         </div>
         <div class="setting-item">
@@ -199,7 +199,7 @@
         document.getElementById('show-fps').checked = localStorage.getItem('cc-show-fps') === 'true';
         document.getElementById('privacy-followers').checked = localStorage.getItem('cc-privacy-followers') !== 'false';
         document.getElementById('privacy-requests').checked = localStorage.getItem('cc-privacy-requests') !== 'false';
-        document.getElementById('swipe-dir').value = localStorage.getItem('cc-swipe-dir') || 'horizontal';
+        document.getElementById('swipe-dir').value = localStorage.getItem('cc-swipe-dir') || 'creator';
         document.getElementById('sprite-quality').value = localStorage.getItem('cc-sprite-quality') || 'Medium';
     }
 
